feat: create animation

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -8,21 +8,23 @@
 </head>
 <body>
 <div class="container">
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1583121274602-3e2820c69888?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');">
-    <h3>Ferrari</h3>
+  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1460999158988-6f0380f81f4d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');">
+    <h3>Three graceful horses</h3>
   </div>
-  <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1573950940509-d924ee3fd345?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1696&q=80');">
-    <h3>Lamborghini</h3>
+  <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1553284965-5dd8352ff1bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');">
+    <h3>White horse</h3>
   </div>
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1694&q=80');">
-    <h3>Camaro</h3>
+  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1584237863847-b21b4f7ccd4f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1298&q=80');">
+    <h3>Horses on the field</h3>
   </div>
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1535732820275-9ffd998cac22?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1650&q=80');">
-    <h3>Aston</h3>
+  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1606107869722-d5cbadabe2f0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');">
+    <h3>Gray horse</h3>
   </div>
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1554744512-d6c603f27c54?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1650&q=80');">
-    <h3>Tesla</h3>
+  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1508582925718-12be0cf69559?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1096&q=80');">
+    <h3>Horse and rider</h3>
   </div>
 </div>
+
+<script src="index.js"></script>
 </body>
 </html>
