fix: update html and create script for show picture

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -5,25 +5,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
   <title>Карточки | Проект 1</title>
+
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+
 </head>
 <body>
-<div class="container">
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1460999158988-6f0380f81f4d?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');">
-    <h3>Three graceful horses</h3>
-  </div>
-  <div class="slide active" style="background-image: url('https://images.unsplash.com/photo-1553284965-5dd8352ff1bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');">
-    <h3>White horse</h3>
-  </div>
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1584237863847-b21b4f7ccd4f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1298&q=80');">
-    <h3>Horses on the field</h3>
-  </div>
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1606107869722-d5cbadabe2f0?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');">
-    <h3>Gray horse</h3>
-  </div>
-  <div class="slide" style="background-image: url('https://images.unsplash.com/photo-1508582925718-12be0cf69559?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1096&q=80');">
-    <h3>Horse and rider</h3>
-  </div>
-</div>
+  <main>
+    <div class="top">
+      <div class="search">
+        <span class="material-symbols-outlined">search</span>
+        <input type="text" id="search-area" placeholder="Поиск...">
+      </div>
+
+      <div class="theme">
+        <span class="material-symbols-outlined sun active">light_mode</span>
+        <span class="material-symbols-outlined moon">clear_night</span>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="slide"><h3 class="title"></h3></div>
+      <div class="slide active"><h3 class="title active"></h3></div>
+      <div class="slide"><h3 class="title"></h3></div>
+      <div class="slide"><h3 class="title"></h3></div>
+      <div class="slide"><h3 class="title"></h3></div>
+    </div>
+  </main>
 
 <script src="index.js"></script>
 </body>
