feat: create event for search

--- a/gallery/index.html
+++ b/gallery/index.html
@@ -13,7 +13,7 @@
   <main>
     <div class="top">
       <div class="search">
-        <span class="material-symbols-outlined">search</span>
+        <span id="search-icon" class="material-symbols-outlined">search</span>
         <input type="text" id="search-area" placeholder="Поиск...">
       </div>
 
