--- a/gallery/index.html
+++ b/gallery/index.html
@@ -25,7 +25,7 @@
 
     <div class="container">
       <div class="slide"><h3 class="title"></h3></div>
-      <div class="slide active"><h3 class="title active"></h3></div>
+      <div class="slide"><h3 class="title"></h3></div>
       <div class="slide"><h3 class="title"></h3></div>
       <div class="slide"><h3 class="title"></h3></div>
       <div class="slide"><h3 class="title"></h3></div>
