--- a/slider/index.html
+++ b/slider/index.html
@@ -5,38 +5,42 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Slider</title>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"/>
+
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="container">
     <div class="sidebar">
-      <div style="background: linear-gradient(229.99deg, #11dee9 -26%, #017e8b 145%);">
-        <h1>Snow in the desert</h1>
-        <p>Love, death & robots</p>
+      <div style="background: linear-gradient(229.99deg, #059110 -26%, #017e8b 145%);">
+        <h1>Budgerigar</h1>
+        <p>Australia, St. Petersburg, Florida</p>
       </div>
 
-      <div style="background: linear-gradient(215.32deg, #f90306 -1%, #9e0706 124%);">
-        <h1>Life Hutch</h1>
-        <p>Love, death & robots</p>
+      <div style="background: linear-gradient(215.32deg, #593f36 -1%, #0f0305 124%);">
+        <h1>Owl</h1>
+        <p>West-Central Europe, Kazakhstan, Russia</p>
       </div>
 
-      <div style="background: linear-gradient(221.87deg, #8308ea 1%, #5305af 128%);">
-        <h1>Zima Blue</h1>
-        <p>Love, death & robots</p>
+      <div style="background: linear-gradient(221.87deg, #e20001 1%, #ff9d00 128%);">
+        <h1>Ara</h1>
+        <p> Mexico, Argentina, Panama–Colombia</p>
       </div>
 
-      <div style="background: linear-gradient(220.16deg, #ffe101 -8%, #f39102 138%);">
-        <h1>Automated Customer Service</h1>
-        <p>Love, death & robots</p>
+      <div style="background: linear-gradient(220.16deg, #eee001 -8%, #a8d200 138%);">
+        <h1>Toucan</h1>
+        <p>Southern Mexico, Central America, South America, Argentina.</p>
       </div>
     </div>
 
     <div class="main-slide">
-      <div style="background-image: url('https://images.unsplash.com/photo-1601574968106-b312ac309953?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1996&q=80');"></div>
-      <div style="background-image: url('https://images.unsplash.com/photo-1511447333015-45b65e60f6d5?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=2023&q=80');"></div>
-      <div style="background-image: url('https://images.unsplash.com/photo-1501529301789-b48c1975542a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80');"></div>
-      <div style="background-image: url('https://images.unsplash.com/photo-1520263115673-610416f52ab6?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1950&q=80');"></div>
+      <div style="background-image: url('https://images.unsplash.com/photo-1551085254-e96b210db58a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=980&q=80');"></div>
+      <div style="background-image: url('https://images.unsplash.com/photo-1463543354440-d5a5e8e62eac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1176&q=80');"></div>
+      <div style="background-image: url('https://images.unsplash.com/photo-1553264646-7eb44743436f?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1131&q=80');"></div>
+      <div style="background-image: url('https://images.unsplash.com/photo-1506868124750-91c0a87be143?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');"></div>
     </div>
-    
+
     <div class="controls">
       <button class="down-button">
         <i class="fas fa-arrow-down"></i>
