--- a/anim/index.html
+++ b/anim/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+  <div class="container" id="board"></div>
+
   <script src="index.js"></script>
 </body>
 </html>
